<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"


    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

tools:context="com.example.jonny.photoapp.InformationActivity">


    <EditText
        android:id="@+id/Pname"
        android:layout_width="299dp"
        android:layout_height="46dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:lineSpacingExtra="8sp"
        android:text="@string/Photo_name"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintHorizontal_bias="0.466" />


    <EditText
        android:id="@+id/Pgrapher"
        android:layout_width="299dp"
        android:layout_height="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:lineSpacingExtra="8sp"
        android:text="@string/Photo_g"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        android:layout_marginTop="55dp"
        app:layout_constraintTop_toBottomOf="@+id/Pname" />

    <Spinner
        android:id="@+id/YearM"
        android:text="@string/Year"
        android:layout_width="299dp"
        android:layout_height="35dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintHorizontal_bias="0.466"
        android:layout_marginTop="115dp"
        app:layout_constraintTop_toBottomOf="@+id/Pgrapher"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/Done"
        style="@android:style/Widget.DeviceDefault.Button.Inset"
        android:layout_width="80dp"
        android:layout_height="37dp"
        android:layout_marginBottom="52dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="36dp"
        android:background="@android:color/holo_blue_dark"
        android:fontFamily="monospace"
        android:onClick="Done"
        android:text="Done"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="737dp" />
</android.support.constraint.ConstraintLayout>
